Fixed layout on iOS 7.1 devices. These devices support the flex-flow property only when it is prefixed. However, prefixfree does not support it: LeaVerou/prefixfree/#6098

--- a/source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
+++ b/source/demyo-web/src/main/webapp/css/demyo/demyo.layout.less
@@ -95,6 +95,8 @@
 main.mdl-layout__content {
 	display: flex;
 	flex-flow: column nowrap;
+	flex-direction: column;
+	flex-wrap: nowrap;
 	
 	#page-content {
 		flex: 1;
